src/test/ui/borrowck/unboxed-closures-move-upvar-from-non-once-ref-closure.nll.stderr
error[E0507]: cannot move out of captured variable in an `Fn` closure
  --> $DIR/unboxed-closures-move-upvar-from-non-once-ref-closure.rs:21:9
   |
LL |         y.into_iter();
   |         ^ cannot move out of captured variable in an `Fn` closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
